# HttpServer

./: README.md  Readme.md  index.html  main.py  pyproject.toml  requirements.txt
js/: script.js
